style(-): adjust gradient and add bg color

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -13,7 +13,7 @@
     "FEATURES": "Features",
     "PRICING": "Pricing",
     "FAQ": "FAQ",
-    "CONTACT": "Contact",
+    "CONTRIBUTE": "Contribute",
     "LOGIN": "Login",
     "LOGIN_2": "Login with your account",
     "GENERATE_RESUME": "Generate resume",
