--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -13,7 +13,7 @@
     "FEATURES": "Características",
     "PRICING": "Precios",
     "FAQ": "FAQ",
-    "CONTACT": "Contacto",
+    "CONTRIBUTE": "Contribuir",
     "LOGIN": "Iniciar sesión",
     "LOGIN_2": "Iniciá sesión con tu cuenta",
     "GENERATE_RESUME": "Generar currículum",
