--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -20,8 +20,40 @@
     "OR": "or"
   },
   "FOOTER": {
-    "COPYRIGHT": "Reshume. All rights reserved.",
+    "TITLE": "Reshume",
+    "DESCRIPTION": "Free and open-source ATS-friendly resume builder.",
+    "COPYRIGHT": "Reshume. All rights reserved. Made with ❤️ by <a>Marcos Dionel</a>",
     "LINKS": {
+      "NAVBAR": {
+        "FEATURES": {
+          "TITLE": "Features",
+          "LINK": "/#features",
+          "LIST": {
+            "1": "All Features"
+          }
+        },
+        "PRICING": {
+          "TITLE": "Pricing",
+          "LINK": "/#pricing",
+          "LIST": {
+            "1": "Pricing Plans"
+          }
+        },
+        "CONTRIBUTE": {
+          "TITLE": "Contribute",
+          "LINK": "/#contribute",
+          "LIST": {
+            "1": "Contribute with Code"
+          }
+        },
+        "FAQ": {
+          "TITLE": "FAQ",
+          "LINK": "/#faq",
+          "LIST": {
+            "1": "Resolve your Doubts"
+          }
+        }
+      },
       "CONTRIBUTE": "Contribute",
       "DONATE": "Donate"
     }
