feat(-): add logo

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -10,6 +10,7 @@
     }
   },
   "NAVBAR": {
+    "TITLE": "Reshume",
     "FEATURES": "Features",
     "PRICING": "Pricing",
     "CONTRIBUTE": "Contribute",
