--- a/public/locales/es/translation.json
+++ b/public/locales/es/translation.json
@@ -10,6 +10,7 @@
     }
   },
   "NAVBAR": {
+    "TITLE": "Reshume",
     "FEATURES": "Características",
     "PRICING": "Precios",
     "CONTRIBUTE": "Contribuir",
